--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
  */
 
 body {
-  background-color: #f2f2f2;
+  background-color: #f8f8f8;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -89,7 +89,7 @@ a:after {
 }
 
 .navbar-default {
-	background-color: #3498db;
+	background-color: #3f7a1f;
 	border-color: transparent;
 }
 
@@ -123,7 +123,7 @@ i {
 /* HeaderWrap */
 #headerwrap {
 	/* background: url(../img/bg01.jpg) no-repeat center top; */
-	background-color: #3498db;
+	background-color: #66cc33;
 	margin-top: -20px;
 	padding-top:200px;
 	background-attachment: relative;
