--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,3 +150,28 @@ i {
 	font-weight: 300;
 	letter-spacing: 1px;
 }
+
+.img-content {
+  position: fixed;
+  top: 500px;
+  left: 500px;
+  height: 100px;
+  width: 30px;
+}
+
+.img-content {
+  position: fixed;
+  top: 100px;
+  left: 500px;
+  height: 100px;
+  width: 10%;
+  z-index: 2;
+}
+
+.img-android {
+  position: fixed;
+  top: 70px;
+  left: 470px;
+  height: 120px;
+  width: 10%;
+}
