--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,10 +125,10 @@ i {
 	/* background: url(../img/bg01.jpg) no-repeat center top; */
 	background-color: #66cc33;
 	margin-top: -20px;
-	padding-top:200px;
+	padding-top:100px;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 650px;
+	min-height: 600px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
@@ -159,19 +159,10 @@ i {
   width: 30px;
 }
 
-.img-content {
-  position: fixed;
-  top: 100px;
-  left: 500px;
-  height: 100px;
-  width: 10%;
-  z-index: 2;
+.banner {
+  padding-top: 100px;
 }
 
-.img-android {
-  position: fixed;
-  top: 70px;
-  left: 470px;
-  height: 120px;
-  width: 10%;
+.banner-pic {
+  padding-bottom: 50px;
 }
