--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
  */
 
 body {
-  background-color: #f8f8f8;
+  background-color: #c3ebad;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -126,6 +126,7 @@ i {
 	background-color: #66cc33;
 	margin-top: -20px;
 	padding-top:100px;
+  padding-bottom: 60px;
 	background-attachment: relative;
 	background-position: center center;
 	min-height: 600px;
@@ -143,7 +144,7 @@ i {
 }
 
 #headerwrap h1 {
-	margin-top: 60px;
+	margin-top: 160px;
 	margin-bottom: 15px;
 	color: white;
 	font-size: 45px;
@@ -157,12 +158,4 @@ i {
   left: 500px;
   height: 100px;
   width: 30px;
-}
-
-.banner {
-  padding-top: 100px;
-}
-
-.banner-pic {
-  padding-bottom: 50px;
 }
